# structura-py

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  lint.yml  pylint.yml  release.yml
src/: cli.py
src/commands/: init.py
src/models/: architecture_model.py  dependency_model.py  project_model.py
src/templates/: default_depdencies.yaml  default_dependencies.yaml  initial_structure.yaml  mvc-api.yaml  mvc.yaml  mvcs.yaml
src/utils/: __init__.py  cmd_utils.py  file_utils.py  init_utils.py
structura_py/commands/: init.py
structura_py/models/: architecture_model.py  dependency_model.py  project_model.py
structura_py/templates/: default_dependencies.yaml  fastapi_server.yaml  flask_server.yaml  hexagonal.yaml  mvc.yaml
structura_py/utils/: cmd_utils.py  file_utils.py  init_utils.py
